# whep-benchmark

./: Cargo.toml  Dockerfile
.github/workflows/: release.yml  rust.yml
rtmp-scripts/: ffmpeg-prepare.sh  ffmpeg-rtmp.sh
src/: bench.rs  main.rs  tui.rs  whep.rs
